Fixed black bar behind sent messages
Fixed a bug where the sent messages have a black bar behind them, extending till the other edge of the panel.

--- a/themes/dark/dark.css
+++ b/themes/dark/dark.css
@@ -3,22 +3,22 @@
 /* Windows Styles */
 
 :root {
-    --dark: #191919;
-    --dark_alpha: rgba(44, 44, 44, 0.9);
-    --darker: #191919;
-    --bgcol: #2b2b2b;
+    --dark: #272c35;
+    --dark_alpha: rgba(39, 44, 53, 0.9);
+    --darker: #1f232a;
+    --bgcol: #101318;
     --light: #d1d1d1;
     --lighter: #e9e9e9;
-    --accent: #191919;
+    --accent: #5792ff;
     --accent2: #09d261;
     --icon: #e1e1e1;
     --shadow: rgba(0, 0, 0, 0.1);
     --mred: #dd3b4f;
-    --mgreen: #70a352;
-    --mblue: #5792f5;
-    --msgout: #252525;
-    --win_title: var(--darker);
-    --ctl_hover: var(--dark);
+    --mgreen: #70A352;
+    --mblue: #527AA3;
+    --msgout: #131a25;
+    --win_title: var(--accent);
+    --ctl_hover: var(--darker);
 }
 
 /* Title bar */
@@ -129,7 +129,7 @@ span[class="_1DOO2"] > svg > rect {
     display: block !important;
     margin-top: 17px;
     padding-top: 10px;
-    content: "~ WhatsApp Desktop Dark Theme by Shuja ~" !important;
+    content: "" !important;
     font-size: 20px;
     color: var(--accent);
     border-top: 1px solid var(--darker);
@@ -239,7 +239,7 @@ span[class="_1DOO2"] > svg > rect {
 /* Reset header title in left/right drawers. */
 .dISnq ._1xGbt {
     margin-top: 2px !important;
-    font-size: 22px; }
+    font-size: 24px; }
 /* Transparent sections. */
 .dISnq ._3g9Jx {
     box-shadow: none !important;
@@ -604,16 +604,19 @@ html[dir=ltr] ._3kx-g:hover:not(._3E86i) {
 
 
 
-/* Message bubbles. */
-html[dir] .message-in .Nxkz1, .message-out, .message {
-    background-color: var(--darker) !important; }
+/* Message bubbles. */ 
+html[dir] .message-in .Nxkz1 {
+    background-color: var(--darker) !important;
+} 
 html[dir] .message-out .Nxkz1 {
-    background-color: var(--msgout) !important; }
+    background-color: var(--msgout) !important;
+}
 /* Deleted messages */
 ._3hePT, ._2bkkE {
     color: var(--light) !important;
     opacity: 0.70;
 }
+
 
 /* File messages (shared files) */
 html[dir] ._2iTjt ._33TLc, html[dir] ._2e5OK ._33TLc {
@@ -1211,3 +1214,4 @@ span svg > path[fill="#00BFA5"] {
         border-radius: 5px;
         box-shadow: 0 4px 24px -2px var(--shadow); }
 }
+
